# xstatic-angular-smart-table

./: .gitreview  LICENSE  MANIFEST.in  PKG-INFO  README.txt  setup.cfg  setup.py
xstatic/pkg/angular_smart_table/: __init__.py
