[metadata]
name = XStatic-smart-table
summary = smart-table 1.4.13 (XStatic packaging standard)
description-file = README.rst
maintainer = Richard Jones
maintainer-email = r1chardj0n3s@gmail.com
home-page = https://github.com/lorenzofox3/Smart-Table
keywords = smart-table angular table angular_smart_table xstatic
license = (same as smart-table)
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
